-feature#0001111: add remove-graph.php cli script
-feature#0001082: Mirror Graph Rename based on template function to work with Data Sources 
-feature#0001030: Lower limit and upper limit |query_*| variable support for Graph Templates
-feature#0000954: implement --alt-y-grid graph option
-feature#0000967: Option to force users to use SSL
-feature#0000431: Add php-xml to requirements, verify required PHP extensions
-feature#0000284: Custom <path_rra> for each device
-feature: Default Script Server/Script Queries now accept host specific ping_retries, max_oids
-feature: Support for new variables |host_ping_retries| and |host_max_oids|
-feature: Support changing the "Reindex Method" of associated data queries
-feature: Manage all Host Availability Options in each Host Template, derive Host options from those
-feature: Add Server Time to page headers, pay respect to user specific date/timeformats
-feature: add_device.php uses a host template like feature#0001122
-feature: Allow the enabling and disabling of a Data Source from the Data Source Edit form
-feature: Rerun already associated SNMP Queries if any SNMP related field was changed during host edit
-feature: add links to Graph Management and Data Sources to Device Edit Screen
-feature: add links to Graph Template and Host Edit to Graph Edit Screen
-feature: add links to Data Template and Host Edit to Data Source Edit Screen
-feature: support using the cacti database api with more than one connection
-feature: Add some more debug lines to Data Query debugging (Verbose Query)
-feature: Add Data Source Type "COMPUTE" to data templates to fully support all rrdtool-1.2.x data source types
-feature: Fix compatibility issues for RRDTool 1.3
-feature: Add additional options to speed data query graph automation process
-feature: Add additional indexes to speed data query graph creation
-feature: Allow the cli reindexing of hosts to be limited to a single query
-feature: Plugin Architecture is now part of main Cacti code